 - GBA Cheats: Fix PARv3 Thumb hooks
 - mGUI: Fix crash if last loaded ROM directory disappears (fixes mgba.io/i/1466)
 - Libretro: Fix crash changing allowing opposing directions (hhromic)
 - Qt: Fix race conditions initializing GDB stub
 - GBA: Set up GPIO mapping on null and ELF ROM regions (fixes mgba.io/i/1481)
 - GBA Cheats: Fix value incrementing in CB slide codes (fixes mgba.io/i/1501)
Misc:
 - GBA Savedata: EEPROM performance fixes
 - GBA Savedata: Automatically map 1Mbit Flash files as 1Mbit Flash
 - GB Memory: Support running from blocked memory
 - Qt: Don't unload ROM immediately if it crashes
 - Debugger: Add breakpoint and watchpoint listing
 - LR35902: Support PC-relative opcode decoding
 - Qt: Support switching webcams
 - Core: Add keysRead callback
 - Qt: Cap window size on start to monitor size
 - GBA BIOS: Add timings for HLE BIOS math functions (fixes mgba.io/i/1396)
 - Debugger: Make tracing compatible with breakpoints/watchpoints
 - Debugger: Print breakpoint/watchpoint number when inserting
 - Qt: Open a message box for Qt frontend errors
 - FFmpeg: Support audio-only recording
 - Qt: Increase maximum magnifications and scaling
 - Qt: Add native FPS button to settings view
 - Qt: Improve sync code
 - Switch: Dynamic display resizing
 - Qt: Make mute menu option also toggle fast-forward mute (fixes mgba.io/i/1424)
 - Vita: L2/R2 and L3/R3 can now be mapped on PSTV (fixes mgba.io/i/1292)
 - mGUI: Remember name and position of last loaded game
 - Core: Create game-related paths if they don't exist (fixes mgba.io/i/1446)
 - Qt: Add option to pause on minimizing window (closes mgba.io/i/1379)
 - Switch: Support file associations
 - Qt: Show error message if file failed to load

0.7.2: (2019-05-25)
Emulation fixes:
 - GB: Fix HALT when IE and IF unused bits are set (fixes mgba.io/i/1349)
 - GB Timer: Fix timing adjustments when writing to TAC (fixes mgba.io/i/1340)
 - GB Video: Fix window y changing mid-window (fixes mgba.io/i/1345)