@@ -152,6 +152,8 @@ Window::Window(CoreManager* manager, ConfigController* config, int playerId, QWi
 	m_log.load(m_config);
 	m_fpsTimer.setInterval(FPS_TIMER_INTERVAL);
 	m_focusCheck.setInterval(200);
+	m_mustRestart.setInterval(MUST_RESTART_TIMEOUT);
+	m_mustRestart.setSingleShot(true);
 
 	m_shortcutController->setConfigController(m_config);
 	m_shortcutController->setActionMapper(&m_actions);
@@ -970,6 +972,10 @@ void Window::tryMakePortable() {
 }
 
 void Window::mustRestart() {
+	if (m_mustRestart.isActive()) {
+		return;
+	}
+	m_mustRestart.start();
 	QMessageBox* dialog = new QMessageBox(QMessageBox::Warning, tr("Restart needed"),
 	                                      tr("Some changes will not take effect until the emulator is restarted."),
 	                                      QMessageBox::Ok, this, Qt::Sheet);
